--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">grayhound</string>
+    <string name="app_name">City Light</string>
 
     <string name="destination_prompt">Choose your destination</string>
 
